# conservatory

./: .gitignore  Cargo.toml  README.md
crates/: Cargo.toml
crates/application/: Cargo.toml
crates/application/src/services/: employee.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  opt.rs
crates/cli/src/db/: postgres.rs
crates/core/: Cargo.toml
crates/core/src/: consts.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/sql/: mod.rs
crates/infrastructure/src/sql/di/: unit_of_work.rs
crates/infrastructure/src/sql/entities/: employee.rs
crates/infrastructure/src/sql/providers/: postgres.rs
crates/infrastructure/src/sql/repositories/: employee.rs
crates/model/: Cargo.toml
crates/model/src/: enums.rs  lib.rs
crates/model/src/di/: unit_of_work.rs
crates/model/src/employee/: index.rs  mod.rs  salary.rs
crates/model/src/identities/: employee_id.rs  mod.rs
crates/model/src/repositories/: employee.rs
crates/model/src/services/: employee.rs
migrations/: 0001_types.down.sql  0001_types.up.sql  0002_employee.down.sql  0002_employee.up.sql
