[package]
name = "conservatory-application"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Application functionality for the conservatory server"
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
conservatory-model = { workspace = true }

anyhow = { workspace = true }