[package]
name = "conservatory-cli"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI functionality for the conservatory server"
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
conservatory-model = { workspace = true }
conservatory-infrastructure = { workspace = true }
conservatory-application = { workspace = true }

time = { workspace = true }
futures-util = { workspace = true }
bollard = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "conservatory"
path = "src/bin/cli.rs"
doc = false