[package]
name = "conservatory-core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core functionality for the conservatory server"
categories.workspace = true
repository.workspace = true

[lints]
workspace = true