[package]
name = "conservatory-model"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Base models for the conservatory server"
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
conservatory-core =  { workspace = true }

serde = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }